Add color to equal sign, increase font size of math symbols, lighter background color

--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
                 <button class=" ">MS</button>
             </div>
 
-            <button class=" ">%</button>
+            <button class=bigger">%</button>
             <button class=" ">CE</button>
             <button class=" ">C</button>
-            <button class=" ">DEL</button>
-            <button class=" ">1/x</button>
-            <button class=" ">x^2</button>
-            <button class=" ">sqrt(x)</button>
-            <button class=" ">/</button>
+            <button class="bigger">←</button>
+            <button class="bigger">1/x</button>
+            <button class="bigger">x²</button>
+            <button class="bigger">√</button>
+            <button class="bigger">÷</button>
 
             <button class="lighter">7</button>
             <button class="lighter">8</button>
             <button class="lighter">9</button>
-            <button class="">x</button>
+            <button class="bigger">×</button>
             <button class="lighter">4</button>
             <button class="lighter">5</button>
             <button class="lighter">6</button>
-            <button class="">-</button>
+            <button class="bigger">-</button>
             <button class="lighter">1</button>
             <button class="lighter">2</button>
             <button class="lighter">3</button>
-            <button class="">+</button>
-            <button class="lighter">+/-</button>
+            <button class="bigger">+</button>
+            <button class="lighter bigger">+/-</button>
             <button class="lighter">0</button>
-            <button class="lighter">.</button>
-            <button class="blue">=</button>
+            <button class="lighter bigger">.</button>
+            <button class="blue bigger">=</button>
         </div>
     </div>
 </body>
