Add "x" to square root symbol, and make memory buttons sligthly darker than background

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="bigger">←</button>
             <button class="bigger">1/x</button>
             <button class="bigger">x²</button>
-            <button class="bigger">√</button>
+            <button class="bigger">√x</button>
             <button class="bigger">÷</button>
 
             <button class="lighter">7</button>
