--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <button class=" ">CE</button>
             <button class=" ">C</button>
             <button class="bigger">←</button>
-            <button class="bigger">1/x</button>
-            <button class="bigger">x²</button>
-            <button class="bigger">√x</button>
+            <button class="">1/x</button>
+            <button class="">x²</button>
+            <button class="">√x</button>
             <button class="bigger">÷</button>
 
             <button class="lighter">7</button>
@@ -42,7 +42,7 @@
             <button class="lighter">2</button>
             <button class="lighter">3</button>
             <button class="bigger">+</button>
-            <button class="lighter bigger">+/-</button>
+            <button class="lighter ">+/-</button>
             <button class="lighter">0</button>
             <button class="lighter bigger">.</button>
             <button class="blue bigger">=</button>
