Add keybind for backspace, modify hover and active styling for buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class=bigger">%</button>
             <button class=" ">CE</button>
             <button class=" ">C</button>
-            <button class="bigger">←</button>
+            <button class="bigger" id="backspace">←</button>
             <button class="">1/x</button>
             <button class="">x²</button>
             <button class="">√x</button>
