Add IDs to every button

--- a/index.html
+++ b/index.html
@@ -14,38 +14,38 @@
         <input type="text" placeholder="0" maxlength="21">
         <div class="buttons">
             <div class="memorybuttons">
-                <button class=" ">MC</button>
-                <button class=" ">MR</button>
-                <button class=" ">M+</button>
-                <button class=" ">M-</button>
-                <button class=" ">MS</button>
+                <button class=" " id="mc">MC</button>
+                <button class=" " id="mr">MR</button>
+                <button class=" " id="mplus">M+</button>
+                <button class=" " id="mminus">M-</button>
+                <button class=" " id="ms">MS</button>
             </div>
 
-            <button class=bigger">%</button>
-            <button class=" ">CE</button>
-            <button class=" ">C</button>
+            <button class="bigger" id="mod">%</button>
+            <button class=" " id="ce">CE</button>
+            <button class=" " id="c">C</button>
             <button class="bigger" id="backspace">←</button>
-            <button class="">1/x</button>
-            <button class="">x²</button>
-            <button class="">√x</button>
-            <button class="bigger">÷</button>
+            <button class="" id="inverse">1/x</button>
+            <button class="" id="squared">x²</button>
+            <button class="" id="squareroot">√x</button>
+            <button class="bigger" id="division">÷</button>
 
-            <button class="lighter">7</button>
-            <button class="lighter">8</button>
-            <button class="lighter">9</button>
-            <button class="bigger">×</button>
-            <button class="lighter">4</button>
-            <button class="lighter">5</button>
-            <button class="lighter">6</button>
-            <button class="bigger">-</button>
-            <button class="lighter">1</button>
-            <button class="lighter">2</button>
-            <button class="lighter">3</button>
-            <button class="bigger">+</button>
-            <button class="lighter ">+/-</button>
-            <button class="lighter">0</button>
-            <button class="lighter bigger">.</button>
-            <button class="blue bigger">=</button>
+            <button class="lighter" id="_7">7</button>
+            <button class="lighter" id="_8">8</button>
+            <button class="lighter" id="_9">9</button>
+            <button class="bigger" id="multiplication">×</button>
+            <button class="lighter" id="_4">4</button>
+            <button class="lighter" id="_5">5</button>
+            <button class="lighter" id="_6">6</button>
+            <button class="bigger" id="minus">-</button>
+            <button class="lighter" id="_1">1</button>
+            <button class="lighter" id="_2">2</button>
+            <button class="lighter" id="_3">3</button>
+            <button class="bigger" id="plus">+</button>
+            <button class="lighter " id="plusminus">+/-</button>
+            <button class="lighter" id="_0">0</button>
+            <button class="lighter bigger" id="comma">.</button>
+            <button class="blue bigger" id="equals">=</button>
         </div>
     </div>
 </body>
