Add "percent" key functionality, rename ID in html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button class=" " id="ms">MS</button>
             </div>
 
-            <button class="bigger" id="mod">%</button>
+            <button class="bigger" id="percentage">%</button>
             <button class=" " id="ce">CE</button>
             <button class=" " id="c">C</button>
             <button class="bigger" id="backspace">←</button>
