Add expression history area

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="calculator-body">
+        <p class = "expression">placeholder text: 12302103 + 12300132 = </p>
         <input type="text" placeholder="0" maxlength="21">
         <div class="buttons">
             <div class="memorybuttons">
